podinfo.yaml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: geekshacking
  labels: 
    env: workshop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: geekshacking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9898"
    spec:
      containers:
      - name: podinfo-container
        image: stefanprodan/podinfo:6.14.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  namespace: geekshacking
  name: podinfo
spec:
  #type: LoadBalancer
  selector:
    app: podinfo
  ports:
  - port: 8080
    targetPort: 9898
