podinfo_gateway_and_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: podinfo
  namespace: geekshacking
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    protocol: HTTP
    port: 9080
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: geekshacking
spec:
  parentRefs:
  - name: podinfo
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: podinfo
      port: 8080
